# houdini-mcp

./: .gitignore  README.md  Windows_webui.bat  install.bat  pyproject.toml  start_webui.bat
docs/: how_to_use.md  知识.md  问题.md
houdini_mcp/: __init__.py  __main__.py  config.py  connection.py  registry.py  server.py  tool_registry.py  utils.py
houdini_mcp/tools/: __init__.py  connections.py  events.py  execution.py  geometry.py  learning.py  lifecycle.py  nodes.py  parameters.py  render.py  scene.py  screen.py  sessions.py  verification.py  viewport.py
houdini_mcp/webui/: __init__.py  __main__.py  app.py
houdini_mcp/webui/routes/: agent_routes.py  config_routes.py  houdini_routes.py  session_routes.py  tool_routes.py
houdini_mcp/webui/static/: agent_config.html  config.html  index.html  tools.html
houdini_plugin/: houdini_mcp_startup.py
tests/: test_e2e.py  test_houtest_save.py  test_hython.py  test_lifecycle.py
